--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,7 +164,7 @@ span.main-movies{
 
 span.main-movies > img{
   margin: 10px;
-  padding: 10px
+  padding: 10px;
   justify-content: space-around;
   max-width: 100px;
   max-height: 200px;
