--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -217,17 +217,23 @@ header{
 
 div.main-header{
   display: flex;
-  background-image: url('http://guyspeed.com/files/2012/02/Groundhog-Day-Poster.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   min-height: 300px;
-
-}
-
-modal.modal{
+  justify-content: space-around;
   background-color: black;
 }
+
+img.display-film{
+  display: flex;
+  min-width: 40%;
+  min-height: 100%''
+}
+img.display-film:first-child{
+  float: left;
+}
+img.display-film:last-child{
+  float: right;
+}
+
 
 div.main-header > button{
   max-height: 30px;
@@ -245,12 +251,58 @@ div.main-header > input.button{
 }
 input.search{
   max-height: 30px;
-  position: fixed;
-  display: flex;
-  left: 150px;
-  top: 10px;
+  min-width: 150px;
+  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: -20%;
+
 }
 
+input.play{
+  position: absolute;
+  top: 90%;
+  left: 80%;
+}
+
+div.main-content-splash{
+  justify-content: space-around;
+  display: inline-block;
+  position: absolute;
+  float: left;
+  bottom: 30%;
+  width: 50%;
+  font-size: 150%;
+  margin: 10px;
+}
+
+
+h2.main-content-splash{
+  color: white;
+  display: flex;
+  width: 50%
+}
+
+p.main-content-splash{
+  color: white;
+  display: flex;
+  width: 80%;
+}
+img.main-content-splash{
+  display: inline-block;
+  float: right;
+  width: 50%;
+  margin: 10px;
+
+}
+
+div.content-holder{
+  width: 100%;
+  height: 100%;
+}
+main{
+  background-color: black;
+}
 span.main-movies{
   display: flex;
   max-height: 300px;
