--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,22 +23,19 @@ div.login-signup > a{
   padding: 10px;
 }
 
-
-div.hide-these{
-  position: relative;
-  display: flex;
-  float: left;
-  top: 30px;
-  width: 250px;
-  height: 400px;
-  background-color: black;
-  z-index: 20;
-  opacity: .2;
-}
-
 div.movie-play{
   height: 100%;
   width: 100%;
+}
+
+p{
+  font-family: arial, sans-serif;
+}
+input{
+  font-family: arial, sans-serif;
+}
+h1, h2, h3, h4, h5, h6{
+  font-family: arial, sans-serif;
 }
 
 div.root{
@@ -49,47 +46,101 @@ div.root{
 div.movie-playing{
   position: fixed;
   display: flex;
-  width: 100%;
+  width: 50%;
   height: 100%;
   z-index: -1;
+  float: right;
 
 }
+
+div.slider-decorator-2{
+  display: none;
+}
+
+img.movie{
+  height: 100%;
+  width: auto;
+  right: -98%;
+  position: absolute;
+  padding: 2px;
+
+}
+
+
 
 h2.title{
   color: white;
   font-size: 20px;
-  position: fixed;
+  position: absolute;
   top: 35px;
   left: 10px;
   opacity: none;
 }
-
-
-p.year{
-  position: fixed;
-  color: white;
-  top: 60px;
-  left: 10px;
-  opacity: none;
+a.movie-play-header{
+  text-decoration: none;
+  color: red;
+  top: 2%;
+  position: absolute;
+  font-size: 30px;
+  left: 2%;
+  z-index: 1
 }
+
+div.hide-these{
+  justify-content: space-between;
+  display: inline-block;
+  position: absolute;
+  width: 50%;
+  font-size: 150%;
+
+  padding: 8px;
+  opacity: 0.85;
+  height: 100%;
+  bottom: 0%;
+  background: #1A1A1A; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left, #1A1A1A , #141414); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, #1A1A1A, #141414); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, #1A1A1A, #141414); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, #1A1A1A , #141414); /* Standard syntax */
+}
+
+
+h1.title{
+  top: 11%;
+  color: white;
+  font-size: 110%;
+  padding: 7px;  position: absolute;
+}
+
 
 p.description{
-  position: fixed;
+  position: absolute;
+  padding: 7px;
+  top: 20%;
   color: white;
-  top: 90px;
-  left: 10px;
-  width: inherit;
-  opacity: none;
-
+  font-size: 90%
 }
 
-p.genre{
-  position: fixed;
+p.year{
   color: white;
-  top: 150px;
-  left: 10px;
-  width: inherit;
-  opacity: none;
+  position: absolute;
+  padding: 7px;
+  top: 50%;
+  font-size: 85%;
+}
+p.genre{
+  color: white;
+  position: absolute;
+  padding: 7px;
+  top: 60%;
+  font-size: 85%;
+}
+p.actors{
+  color: white;
+  position: absolute;
+  padding: 7px;
+  top: 75%;
+  font-size: 85%;
 }
 
 div.movie-playing > iframe{
@@ -98,19 +149,19 @@ div.movie-playing > iframe{
 }
 
 img.movie-poster:hover {
-    background-color: lightgreen;
-    min-width: 200px;
-    min-height: 200px;
+    background-color: red;
+
 }
 
 img.movie-poster{
   max-width: 100px;
-  max-height: 100px;
-  min-width: 100px;
-  min-height: 100px;
+  max-height: 150px;
+  width: auto;
+  height: auto;
   padding: 10px;
   margin-left: 10px;
   margin-right: 10px;
+
 }
 
 span.main-movies{
@@ -131,12 +182,29 @@ label.signup-or-login{
 header.logo{
   display: flex;
   width: 50%;
+  position: absolute;
+
 }
 a.header-link{
   text-decoration: none;
   color: red;
+  top: -28%;
+  position: absolute;
+  font-size: 30px;
+  left: -5%;
 }
 
+a.splash-logo{
+  left: 3%;
+}
+h1.logo{
+  font-size: 30px;
+}
+
+button.movie-play{
+  position: absolute;
+  right: 6%;
+}
 h2.header-name{
   display: flex;
   float: right;
@@ -154,7 +222,7 @@ div.login-signup{
 }
 
 div.over-demo{
-  position: fixed;
+  position: absolute;
   top: 200px;
   left: 50px;
 }
@@ -202,7 +270,7 @@ button {
 }
 
 button.splash-demo{
-  position: fixed;
+  position: absolute;
   font-size: 16px;
   top: 300px;
   left: 50px;
@@ -237,14 +305,14 @@ img.display-film:last-child{
 
 div.main-header > button{
   max-height: 30px;
-  position: fixed;
+  position: absolute;
   display: flex;
   right: 10px;
   top: 10px;
 }
 div.main-header > input.button{
   max-height: 30px;
-  position: fixed;
+  position: absolute;
   display: flex;
   left: 10px;
   top: 200px;
@@ -255,54 +323,139 @@ input.search{
   display: inline-block;
   position: absolute;
   left: 50%;
-  top: -20%;
+  top: -30%;
+  margin: 11px;
+}
 
+body{
+  background-color: #141414;
 }
 
 input.play{
   position: absolute;
-  top: 90%;
-  left: 80%;
+  top: 80%;
+  left: 95%;
+  padding: 4px;
+  z-index: 5;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 14px;
 }
+
+input.movie-play{
+  position: absolute;
+  top: 50%;
+  left: 75%;
+  padding: 4px;
+  z-index: 5;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 14px;
+}
+
+h3.label{
+  color: white;
+  background-color: #141414;
+  padding-left: 6px;
+}
+
+h1.splash-demo{
+
+}
+
+h3.IMDB-50{
+  background-color: #1A1A1A;
+}
+
+
 
 div.main-content-splash{
-  justify-content: space-around;
+  justify-content: space-between;
   display: inline-block;
   position: absolute;
-  float: left;
   bottom: 30%;
   width: 50%;
+  height: 50%;
   font-size: 150%;
   margin: 10px;
+  padding: 8px;
+  background-color: inherit;
+  top: 16%;
+  left: 5%;
 }
 
 
-h2.main-content-splash{
+div.main-content-splash > h1{
+  text-align: center;
+}
+
+
+h1.main-content-splash{
   color: white;
   display: flex;
-  width: 50%
+  width: 80%;
+  font-size: 110%;
+  top: -10%;
+  position: absolute;
 }
 
 p.main-content-splash{
   color: white;
-  display: flex;
-  width: 80%;
+  width: 90%;
+  height: 3%;
+  font-size: 91%;
+  display: inline-block;
 }
 img.main-content-splash{
   display: inline-block;
-  float: right;
-  width: 50%;
   margin: 10px;
+  width: auto;
+  min-height: 60%;
+  min-width: 25%;
+  max-height: 95%;
+  max-width: 100%;
+  padding-top: 44px;
+  padding-right: 9px;
+  position: absolute;
+  right: 8%;
+}
+xw
+
+div.main-div{
+  position: absolute;
+  bottom: 1%;
+}
+div.main-div:first-child{
+  background-color: #1A1A1A;
+  background-image:
+    linear-gradient(
+      #1A1A1A,
+      #141414 30%
+    );
+}
+
+div.IMDB-50{
+  background-image:
+    linear-gradient(
+      #1A1A1A,
+      #141414 30%
+    );
+}
+
+div.slider{
+  position: absolute;
+  bottom: 1%;
+  background-color: #141414;
+  padding: 15px;
 
 }
 
 div.content-holder{
   width: 100%;
-  height: 100%;
+  height: 550px;
+  background-color: #1A1A1A
 }
-main{
-  background-color: black;
-}
+
 span.main-movies{
   display: flex;
   max-height: 300px;
