Fix rating bugs, change splash page gif, add loader

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,8 @@ div.movie-play{
 img.movie-searched-poster{
   max-width: 300px;
   max-height: 300px;
-  min-height: 200px;
+  min-height: 215px;
+  min-width: 100px;
   width: auto;
   height: auto;
   padding: 10px;
@@ -296,7 +297,16 @@ div.splash-div{
   min-width: 200px;
   min-height: 700px;
   max-height: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background: url('http://res.cloudinary.com/dqiuefax1/image/upload/v1478817057/giphy_5_txuflu.gif') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
+
 
 iframe.splash-player{
   width: 100%;
@@ -483,7 +493,7 @@ h3.IMDB-50{
   z-index: 3;
 }
 div.search-results{
-  width: 90%;
+  width: 85%;
   height: 100%;
   margin-left: 15%;
 }
@@ -591,7 +601,7 @@ span.main-movies > img{
 }
 
 fieldset, label { margin: 0; padding: 0; }
-body{ margin: 20px; }
+body{ margin: 1px; }
 
 
 /****** Style Star Rating Widget *****/
@@ -635,4 +645,99 @@ div.login-signup{
 position: fixed;
 top: 2%;
 right: 13%;
+}
+
+div.loading
+{
+  background-color: #404456;
+  width: 4000px;
+  height: 4000px;
+
+
+}
+
+#loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -2.7em;
+  margin-left: -2.7em;
+  width: 5.4em;
+  height: 5.4em;
+  background-color: #404456;
+}
+
+#hill {
+  position: absolute;
+  width: 7.1em;
+  height: 7.1em;
+  top: 1.7em;
+  left: 1.7em;
+  background-color: transparent;
+  border-left: .25em solid whitesmoke;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#hill:after {
+  content: '';
+  position: absolute;
+  width: 7.1em;
+  height: 7.1em;
+  left: 0;
+  background-color: #404456;
+}
+
+#box {
+  position: absolute;
+  left: 0;
+  bottom: -.1em;
+  width: 1em;
+  height: 1em;
+  background-color: transparent;
+  border: .25em solid whitesmoke;
+  border-radius: 15%;
+  -webkit-transform: translate(0, -1em) rotate(-45deg);
+  -moz-transform: translate(0, -1em) rotate(-45deg);
+  -ms-transform: translate(0, -1em) rotate(-45deg);
+  transform: translate(0, -1em) rotate(-45deg);
+  animation: push 2.5s cubic-bezier(.79, 0, .47, .97) infinite;
+}
+
+@keyframes push {
+  0% {
+    transform: translate(0, -1em) rotate(-45deg);
+  }
+  5% {
+    transform: translate(0, -1em) rotate(-50deg);
+  }
+  20% {
+    transform: translate(1em, -2em) rotate(47deg);
+  }
+  25% {
+    transform: translate(1em, -2em) rotate(45deg);
+  }
+  30% {
+    transform: translate(1em, -2em) rotate(40deg);
+  }
+  45% {
+    transform: translate(2em, -3em) rotate(137deg);
+  }
+  50% {
+    transform: translate(2em, -3em) rotate(135deg);
+  }
+  55% {
+    transform: translate(2em, -3em) rotate(130deg);
+  }
+  70% {
+    transform: translate(3em, -4em) rotate(217deg);
+  }
+  75% {
+    transform: translate(3em, -4em) rotate(220deg);
+  }
+  100% {
+    transform: translate(0, -1em) rotate(-225deg);
+  }
 }
