--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,8 @@ div.movie-play{
   width: 100%;
 }
 
+
+
 img.movie-searched-poster{
   max-width: 300px;
   max-height: 300px;
@@ -232,7 +234,7 @@ header.logo{
 
 }
 
-nav > p{
+nav.header > p{
   color: white;
   position: fixed;
   top: 0%;
@@ -296,7 +298,8 @@ div.over-demo > p{
 div.splash-div{
   min-width: 200px;
   min-height: 700px;
-  max-height: 80%;
+  height: 1300px;
+  width: 2000px;
   background-repeat: no-repeat;
   background-position: center;
   background: url('http://res.cloudinary.com/dqiuefax1/image/upload/v1478817057/giphy_5_txuflu.gif') no-repeat center center fixed;
@@ -306,6 +309,17 @@ div.splash-div{
   background-size: cover;
 
 }
+
+div.index-page{
+  margin: 0;
+  padding: 0;
+  border: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+}
+
+
 
 
 iframe.splash-player{
@@ -355,12 +369,18 @@ header{
   position: absolute;
 }
 
+nav.footer > p {
+  color: white;
+  position: absolute;
+  left: 3%;
+}
+
 div.main-header{
   display: flex;
   min-height: 300px;
   justify-content: space-around;
   background-color: #1A1A1A;
-  position: absolute;
+
   width: 100%;
 }
 
@@ -397,9 +417,9 @@ input.search{
   max-height: 30px;
   min-width: 150px;
   display: inline-block;
-  position: absolute;
+  position: fixed;
   left: 44%;
-  top: 12%;
+  top: 1%;
   margin: 11px;
   z-index: 3;
 }
@@ -442,7 +462,7 @@ h3.IMDB-50{
 
 input#unique{
   left: 90%;
-  top: 100%;
+  top: 79%;
   z-index: 15;
   position: relative;
 }
@@ -454,13 +474,52 @@ nav{
   height: 8%;
   opacity: .93;
   position: fixed;
-  top: 0%;
+
   background: #1A1A1A;
+}
+
+nav.header{
+  top: 0%;
+}
+
+nav.footer{
+  bottom: 0%;
+  justify-content: space-around;
+}
+
+a.footer-bar{
+  color: red;
+}
+
+a.footer-bar:first-child{
+  position: absolute;
+  right: 10%;
+}
+
+a.footer-bar:last-child{
+  position: absolute;
+  right: 5%;
+}
+
+p.footer-bar{
+  color: white;
+  position: absolute;
+  left: 3%;
+}
+
+
+p.search{
+  color: white;
+  top: -1%;
+  right: 58%;
+  position: fixed;
+  font-size: 130%;
 }
 
 nav >button.header-bar{
   position: fixed;
   right: 4%;
+  top: 0%
 }
 h1.logo{
   color: red;
@@ -474,10 +533,10 @@ div.main-content-splash{
   justify-content: space-between;
   display: inline-block;
   position: absolute;
-  bottom: 22%;
+  bottom: 32%;
   width: 50%;
-  height: 66%;
-  font-size: 150%;
+  height: 58%;
+  font-size: 150%
   margin: 10px;
   padding: 8px;
   background-color: inherit;
@@ -509,7 +568,7 @@ h1.main-content-splash{
   color: white;
   top: 0%;
   position: absolute;
-  font-size: 150%;
+  font-size: 250%;
   left: 4%;
   padding: 8px;
 }
@@ -519,7 +578,7 @@ p.main-content-splash{
   color: white;
   width: 90%;
   height: 1%;
-  font-size: 91%;
+  font-size: 140%;
   display: inline-block;
   padding-top: 20px;
 }
@@ -540,10 +599,7 @@ img.main-content-splash{
 
 
 div.main-div{
-  position: absolute;
-    bottom: -32%;
-    width: 100%;
-    height: 50%
+  width: 100%;
 }
 
 div.main-div:first-child{
