--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -536,7 +536,7 @@ div.main-content-splash{
   bottom: 32%;
   width: 50%;
   height: 58%;
-  font-size: 150%
+  font-size: 150%;
   margin: 10px;
   padding: 8px;
   background-color: inherit;
