--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -462,7 +462,7 @@ h3.IMDB-50{
 
 input#unique{
   left: 90%;
-  top: 79%;
+  top: 50%;
   z-index: 15;
   position: relative;
 }
@@ -471,7 +471,7 @@ nav{
   display: flex;
   z-index: 13;
   width: 100%;
-  height: 8%;
+  height: 5%;
   opacity: .93;
   position: fixed;
 
@@ -531,18 +531,18 @@ h1.logo{
 
 div.main-content-splash{
   justify-content: space-between;
-  display: inline-block;
-  position: absolute;
-  bottom: 32%;
-  width: 50%;
-  height: 58%;
-  font-size: 150%;
-  margin: 10px;
-  padding: 8px;
-  background-color: inherit;
-  left: 5%;
-  opacity: .8;
-  z-index: 2;
+    display: inline-block;
+    position: absolute;
+    top: 10%;
+    width: 50%;
+    height: 35%;
+    font-size: 150%;
+    margin: 10px;
+    padding: 8px;
+    background-color: inherit;
+    left: 5%;
+    opacity: .8;
+    z-index: 2;
   background: linear-gradient(to right, #1A1A1A, 80% rgba(0,0,0,0));
 }
 
@@ -593,8 +593,8 @@ img.main-content-splash{
   max-width: 100%;
   padding-top: 44px;
   padding-right: 9px;
-  position: absolute;
-  right: 8%;
+  position: relative;
+  float: right;
 }
 
 
