--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,10 @@ div.login-signup > a{
   padding: 10px;
 }
 
+div.login-signup{
+  width: 50%;
+}
+
 div.movie-play{
   height: 100%;
   width: 100%;
@@ -138,13 +142,9 @@ div.hide-these:hover{
 
 }
 
-
 div.hide-these{
-  justify-content: space-between;
-  display: inline-block;
   position: absolute;
   width: 35%;
-  font-size: 150%;
   padding: 8px;
   opacity: 0.0;
   height: 60%;
@@ -156,7 +156,7 @@ div.hide-these{
 h1.title{
   top: 5%;
   color: white;
-  font-size: 90%;
+  font-size: 3vw;
   padding: 7px;
   position: absolute;
 }
@@ -167,7 +167,7 @@ p.description{
   padding: 7px;
   top: 17%;
   color: white;
-  font-size: 70%;
+  font-size: 2vw;
   margin: 3px;
 }
 
@@ -176,21 +176,21 @@ p.year{
   position: absolute;
   padding: 7px;
   top: 47%;
-  font-size: 70%;
+  font-size: 2vw;
 }
 p.genre{
   color: white;
   position: absolute;
   padding: 7px;
   top: 59%;
-  font-size: 70%;
+  font-size: 2vw;
 }
 p.actors{
   color: white;
   position: absolute;
   padding: 7px;
   top: 70%;
-  font-size: 70%;
+  font-size: 2vw;
 }
 
 img.movie-poster:hover {
@@ -253,9 +253,7 @@ a.header-link{
 a.splash-logo{
   left: 3%;
 }
-h1.logo{
-  font-size: 30px;
-}
+
 
 button.movie-play{
   position: absolute;
@@ -272,19 +270,12 @@ img.splash-image{
   height: 600px;
   z-index: -100;
 }
-div.login-signup{
-  display: flex;
-  float: right;
-  position: fixed;
-  right: 3%;
-  top: 3%;
-  width: 50%;
-  justify-content: flex-end;
-}
+
+
 
 div.over-demo{
   position: absolute;
-  top: 200px;
+  top: 50%;
   left: 50px;
 }
 
@@ -329,7 +320,7 @@ iframe.splash-player{
 
 input.button {
   font: Sans-serif;
-  font-size: 12px;
+  font-size: 1.2vw;
   border-radius: 5px;
   color: white;
   background-color: red;
@@ -337,26 +328,43 @@ input.button {
   padding: 7px;
   margin: 5px;
   margin-top: 20px;
-  margin-right: 15px;
+  margin-right: 20px;
   cursor: pointer;
 }
 button {
   font: Sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   border-radius: 5px;
   color: white;
   background-color: red;
   border: none;
   padding: 10px;
-  margin: 5px;
   margin-top: 10px;
-  margin-right: 15px;
+  margin-right: 6px;
   cursor: pointer;
 }
 
+div.signup-div{
+  width: 50%;
+  float: right;
+  display: inline-block;
+}
+
+div.login-div{
+  width: 50%;
+  float: left;
+  display: inline-block;
+}
+
+div.logo-div{
+  width: 50%;
+  float: left;
+}
+
+
 button.splash-demo{
   position: absolute;
-  font-size: 16px;
+  font-size: 18px;
   top: 300px;
   left: 50px;
   padding: 10px;
@@ -418,10 +426,14 @@ input.search{
   min-width: 150px;
   display: inline-block;
   position: fixed;
-  left: 44%;
+  left: 38%;
   top: 1%;
   margin: 11px;
   z-index: 3;
+  font-size:13px;color:gray;
+  background-image:url('http://i47.tinypic.com/r02vbq.png');
+  background-repeat:no-repeat;
+  background-position:right ;outline:0;
 }
 
 body{
@@ -436,7 +448,7 @@ input.play{
   z-index: 5;
   padding-left: 10px;
   padding-right: 10px;
-  font-size: 14px;
+  font-size: 2vw;
 }
 
 input.movie-play{
@@ -447,13 +459,14 @@ input.movie-play{
   z-index: 5;
   padding-left: 10px;
   padding-right: 10px;
-  font-size: 14px;
+  font-size: 2vw;
 }
 
 h3.label{
   color: white;
   background-color: #141414;
   padding-left: 6px;
+  margin-left: 20px;
 }
 
 h3.IMDB-50{
@@ -461,8 +474,6 @@ h3.IMDB-50{
 }
 
 input#unique{
-  left: 90%;
-  top: 50%;
   z-index: 15;
   position: relative;
 }
@@ -471,7 +482,7 @@ nav{
   display: flex;
   z-index: 13;
   width: 100%;
-  height: 5%;
+  height: 7%;
   opacity: .93;
   position: fixed;
 
@@ -513,7 +524,7 @@ p.search{
   top: -1%;
   right: 58%;
   position: fixed;
-  font-size: 130%;
+  font-size: 2vw;
 }
 
 nav >button.header-bar{
@@ -527,25 +538,23 @@ h1.logo{
   top: 0%;
   position: fixed;
   font-size: 36px;
+  margin-left: 20px;
+  margin-top: 7px;
 }
 
 
-
-
 div.main-content-splash{
-  justify-content: space-between;
-    display: inline-block;
-    position: absolute;
-    top: 10%;
-    width: 50%;
-    height: 35%;
-    font-size: 150%;
-    margin: 10px;
-    padding: 8px;
-    background-color: inherit;
-    left: 5%;
-    opacity: .8;
-    z-index: 2;
+  display: inline-block;
+  position: absolute;
+  top: 5%;
+  width: 45%;
+  font-size: 2vw;
+  margin: 20px;
+  padding: 10px;
+  opacity: .8;
+  overflow: auto;
+  flex-direction: column;
+  z-index: 2;
   background: linear-gradient(to right, #1A1A1A, 80% rgba(0,0,0,0));
 }
 
@@ -559,48 +568,30 @@ div.search-results{
   width: 85%;
   height: 100%;
   margin-left: 15%;
-}
-
-
-div.main-content-splash > h1{
-  text-align: center;
+  position: absolute;
+  top: 7%;
 }
 
 h1.main-content-splash{
   text-decoration: none;
   color: white;
-  top: 0%;
-  position: absolute;
-  font-size: 180%;
-  left: 4%;
-  padding: 8px;
+  font-size: 3vw;
 }
-
 
 p.main-content-splash{
   color: white;
-  width: 90%;
-  height: 4%;
-  font-size: 100%;
-  display: inline-block;
-  padding-top: 20px;
-  left: 0%;
-  position: relative;
-  display: flex;
+  width: 100%;
+  font-size: 2vw;
 }
 
 img.main-content-splash{
-  display: inline-block;
+  display: inline-block; */
   margin: 10px;
-  width: auto;
-  min-height: 60%;
-  min-width: 25%;
-  max-height: 95%;
-  max-width: 100%;
-  padding-top: 44px;
-  padding-right: 9px;
+  top: 8%;
+  right: 4%;
+  padding-right: 5px;
   position: relative;
-  float: right;
+  float: right;;
 }
 
 
@@ -634,10 +625,6 @@ div.slider{
 
 }
 
-p.main-description{
-  padding-top: 85px;
-}
-
 div.content-holder{
   width: 100%;
   min-height: 650px;
@@ -663,23 +650,11 @@ span.main-movies > img{
   max-height: 200px;
 }
 
-h1.splash{
-  margin: 5px;
-}
 
 button.login{
-  position: fixed;
-  top: 0%;
-  right: 11%;
-
+  float: right;
 }
 
-button.signup{
-  position: fixed;
-  top: 0%;
-  right: 1%;
-
-}
 
 
 
@@ -723,12 +698,6 @@ body{ margin: 1px; }
 .rating > input:checked ~ label:hover,
 .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
 .rating > input:checked ~ label:hover ~ label { color: #E00609;  }
-
-div.login-signup{
-position: fixed;
-top: 2%;
-right: 13%;
-}
 
 div.loading
 {
