Fix css styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -585,7 +585,7 @@ p.main-content-splash{
 }
 
 img.main-content-splash{
-  display: inline-block; */
+  display: inline-block; 
   margin: 10px;
   top: 8%;
   right: 4%;
