--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>FakeFlix</title>
+  <link rel="icon" type="image/png" href="http://res.cloudinary.com/dqiuefax1/image/upload/v1480899111/Screen_Shot_2016-12-04_at_4.50.59_PM_wbebd5.png">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
