--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6{
   font-family: arial, sans-serif;
 }
 
-div.root{
+.root{
   height: 100%;
   width: 100%;
   color: white;
