--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,6 +6,6 @@
 </script>
 
 <main id="root">
-  This site is currently down for repairs. It will be up again soon.
+  <p id='root'>This site is currently down for repairs. It will be up again soon.</p>
 
 </main>
