--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1009,8 +1009,18 @@ div.loading
 
 .Movie-poster{
   padding: 10px;
-  max-height: 300px;
+  max-height: 600px;
   max-width: 400px;
+  min-height: 320px
+}
+
+.Actor-list{
+  width: 15%;
+    top: 10%;
+    padding: 5px;
+    padding-left: 40px;
+    background-color: #2196F3;
+    position: absolute;
 }
 
 .carousel{
